<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>uk.ac.ebi.enfin.mi.cluster</groupId>
    <artifactId>micluster-parent</artifactId>
    <version>1.8.0-SNAPSHOT</version>

    <name>MI :: Cluster Parent</name>
    <packaging>pom</packaging>

    <modules>
        <module>micluster</module>
        <module>micluster-example</module>
        <module>micluster-jami</module>
        <module>micluster-score</module>
        <module>micluster-scoredistribution</module>
        <module>mimerge-rest</module>
    </modules>

    <properties>
        <ols-client.version>2.13</ols-client.version>
        <junit.version>4.13.2</junit.version>

        <miscore.version>1.4.0-SNAPSHOT</miscore.version>
        <jami.version>3.3.0-SNAPSHOT</jami.version>
        <psicquic.version>1.5.0-SNAPSHOT</psicquic.version>
        <lombok.version>1.18.24</lombok.version>
        <log4j.version>1.2.17</log4j.version>
        <spring.version>4.3.30.RELEASE</spring.version>
    </properties>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.10.1</version>
                <configuration>
                    <source>11</source>
                    <target>11</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>2.22.2</version>
            </plugin>
        </plugins>
    </build>

    <repositories>
        <repository>
            <id>intact.nexus</id>
            <name>IntAct Nexus</name>
            <url>http://www.ebi.ac.uk/intact/maven/nexus/content/groups/public</url>
        </repository>
        <repository>
            <id>nexus-ebi-release-repo</id>
            <url>http://www.ebi.ac.uk/Tools/maven/repos/content/groups/ebi-repo/</url>
        </repository>
        <repository>
            <id>nexus-ebi-snapshot-repo</id>
            <url>http://www.ebi.ac.uk/Tools/maven/repos/content/groups/ebi-snapshots/</url>
        </repository>
    </repositories>

    <pluginRepositories>
        <pluginRepository>
            <id>intact.nexus</id>
            <name>IntAct Nexus</name>
            <url>http://www.ebi.ac.uk/intact/maven/nexus/content/groups/public</url>
        </pluginRepository>

    </pluginRepositories>

    <distributionManagement>
        <!-- EBI repo -->
        <repository>
            <id>pst-release</id>
            <name>EBI Nexus Repository</name>
            <url>http://www.ebi.ac.uk/Tools/maven/repos/content/repositories/pst-release</url>
        </repository>
        <!-- EBI SNAPSHOT repo -->
        <snapshotRepository>
            <uniqueVersion>false</uniqueVersion>
            <id>pst-snapshots</id>
            <name>EBI Nexus Snapshots Repository</name>
            <url>http://www.ebi.ac.uk/Tools/maven/repos/content/repositories/pst-snapshots</url>
        </snapshotRepository>
    </distributionManagement>
</project>